@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install
+DEPEND=dev-java/maven-bin
+DESCRIPTION=Guacamole is a html5 vnc client as servlet
+EAPI=5
+HOMEPAGE=http://guacamole.sourceforge.net/
+IUSE=ldap mysql
+KEYWORDS=~x86
+LICENSE=AGPL-3
+RDEPEND=dev-java/maven-bin www-servers/tomcat >virtual/jre-1.6 net-misc/guacamole-server mysql? ( virtual/mysql ) ldap? ( net-nds/openldap )
+SLOT=0
+SRC_URI=mirror://sourceforge/guacamole/guacamole-client-0.9.0.tar.gz mysql? ( http://sourceforge.net/projects/guacamole/files/current/extensions/guacamole-auth-mysql-0.9.0.tar.gz ) ldap? ( http://sourceforge.net/projects/guacamole/files/current/extensions/guacamole-auth-ldap-0.9.0.tar.gz )
+_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=7a23b675280bc0002f44bb172d2ee610
