@@ -4,15 +4,27 @@ Hash: SHA256
 DIST libmicrohttpd-0.9.32.tar.gz 1124859 SHA256 e554b8e1313b336616a460aca0ac1fc8c96552320bc1d4dc503ce00bfb70d89c SHA512 66ed77782e880378e476348b85554f7b70324d4dc51b8fa2fadd1c3f46ae3467b1acb3a1fe23804b65a5db5aa79e5b748e46a7486cf70bf14b74ffe77abd0f71 WHIRLPOOL 4be16f9cdf3dce663586a38ac6cd8bba23dfb744c553e6de2742b5153a52443139dd05ed07117062bde8a8235823fa7ebcb860c95dbdd3dd14c6165f01d2e39b
 DIST libmicrohttpd-0.9.33.tar.gz 1104292 SHA256 d9587e8497548f820650cd607daf3615ea3272435779378983032c570f1cd559 SHA512 4ca8dc37b59e5b3df2426b763420d88ae7691c57bace4bdb6bb766a135904c895892236a21da45bb636b8fcf0835fa101ce82484dec272e850b7627719c6e0f8 WHIRLPOOL 8ca8593f25637b0db7c837fbc8f7d9abc5aa3e935501b7bc886f0152d7acdeac5f49c8130d77c1bbdb68e019a3927c6cc0345ba46364d8ee33bb70dfa6d812df
 DIST libmicrohttpd-0.9.34.tar.gz 1141536 SHA256 29a2bfd4fd2ddf60c756b8c283291a134898e3cc143843be421a040be1b25a88 SHA512 ca4403adb89251abefc85cfd5dafa2a391db1cdff529b7056ca6429cc6f1ba99f510a9fbc34dbbb2c99ef006fe4be56ea6aa97c0a3a2ec94af03a2b6c3a7419f WHIRLPOOL 593ae1228c437163670e506e26de1321448bfb4d772dd7f0bd1a0ca999fa158ae34434bb7865e22e24173f3078a5e9ad463b1ba1289f33493fecf0f356522b11
+DIST libmicrohttpd-0.9.35.tar.gz 1167844 SHA256 bc5df1595a9119e9005dc69e6417d0165c04db1ad16754063a2adfd3293510fc SHA512 17d87eea02d68d8636cc252082684d64036521b9f47ae7fa82126037d3b4807c58947e80086a6a162d0e4baca9089023e39075b9688b684f5f146bf552e1f358 WHIRLPOOL cdb5b9091839bb8785a2d3debfecdbffb81da28e4e57ddf41080f29c0154c58f9ede4263ad51eb7244387eb32b80531132b9a329012893a6c7496814eefcdbbe
 EBUILD libmicrohttpd-0.9.32.ebuild 1185 SHA256 4066be97ee38419f8dd8f8d195a87203b57b8a8bfd21fa923ff120ab6d91815a SHA512 0372d32284c7f5aa5faf50cdcc5d124b051a5e1999f92c235a097795124b6f016c80a824481549715e87557d5591a6953ff93bfbea9dae8a32ebdf3ece13f2a9 WHIRLPOOL 8690bdf309a4ef9a6d75b2d427a7e12a396379ccdd403b2d0560453394b425fd8c66cff0a86d4f314ec4ce323e2f249d8fb23d9e4d0f99aa2cad4bc7795ed1bf
 EBUILD libmicrohttpd-0.9.33.ebuild 1193 SHA256 01068c40a1ca281d7c112da9129a3db82910877deb5283e29287099eb6dc0ebd SHA512 8649c287b507adcef717fbeea7c824d17e8efcb79041196791a411f69223761e135519152e9f52d07feb5db84669172addd32332e90ed085d568eb3d1646a8fd WHIRLPOOL 3fc6cb08b368a2f116fdecc95904a41746c740d976ef6e0323db91e7d1e88f9a6a87fdd70cccde6876a2be77a8d24374358f503ddbda3a2a0c7a2ffbbe35a104
 EBUILD libmicrohttpd-0.9.34.ebuild 1193 SHA256 afba9ae3db81236d48fb3b964980f3cd3dd6d8c571e39d03a06962ed0b2cbea2 SHA512 e967fc070fc027cacc11a45b6cf14487a2f21a361b6fe4f9da6a9a2fc1cd3f9b3464c3acd8fbed94d8b29180c7c1248c8cf227a7f521e51933620877a659085a WHIRLPOOL e2e55f333a7460f9f7b614c7d7e8e9e9a3ad8fc68924983987b99a5b2c73e4f4610c3ee0b91c435ad2483de7ffa11652f5b886e27c15544fd894fa61be3e53ce
-MISC ChangeLog 9372 SHA256 96e5399037bfe15947fc3351aa149db99a908b99e9e56a0606440339886e9c6d SHA512 b4d8d6ab3d126b46a353161246e7b77401a7af4524928123dbe311936e7c3b495c49dccce3bfdcf6faed16347a96fd11f286fcf849b574af969a5da0b0638656 WHIRLPOOL 65031f85971af3bea802b58e765168dfe954d5716517316b8a4a79bef8349df6d446ac8c3919813e00c054396c6be5e006858e0b57d081255a88179b049a111d
+EBUILD libmicrohttpd-0.9.35.ebuild 1194 SHA256 d4b348fa8b2a2f6918486fcb55d5cbe9490fc7c0f61680880595eeb70ddb7ddf SHA512 0f3e90d24d3b2ab263f55a25f4d30998f454990478cd0480d2688bb0505cc69e01cdaf8b47c29caa453bd11d7a36329d5fda9e08491da01273c49d6fcb5b96ea WHIRLPOOL 7c5e5c28ba104d9397379d8d0ef5c1bbde7b6b1582b696bf3e46a30f15f812b82b0d34c0a8cba0dbf5c57a474e9d9391ebf1e79710bc96096cb1a4d6737de10f
+MISC ChangeLog 9513 SHA256 9aa820c7396578d777371d2afeaea801d0b5e15841f1955d5ece342c9e12c947 SHA512 1db1599aa06c74e371934d182293edb17023ac5bd3d03191c5feccc5b3b638421756b8aacd35f08711b07db1c315940a59db828b85f5484150d15aabe29867ed WHIRLPOOL 53eebea74e0633216f6cd95b83d5c9bf0051c01774fddbddc920bf46d62bccf252c9bfa7ca29f395b8b33b87dacd96bdb9344e86a4aed5d9b638ab993cd59c34
 MISC metadata.xml 359 SHA256 99f8013d4996905dc53e27191e9fff66c21e3b3ae2a912f14b9881b52689fcee SHA512 28d6502d6a724c5f63ab3c9b0917c7e513463b533bef7daa4c50256a6c1cf6c026897b21016f26eb2eaf999ed0b4c7561c9d59e6dcd33ef950466d394f9aacbe WHIRLPOOL bc31516b0cd0fa502b3463dbad6d7a5240f0d427086cde4189dd7cf6b3b1e58ca710398ebd4be4183e7f390dfb1420158d9758fabc8882abb45ef4b9bed8fc30
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlM0O6UACgkQC77qH+pIQ6RFTgD+I0uZjujGa08FiPjM1Wu1SU4q
-KdfdidGBzUvrb6tbbxQA/1ZMHtbwezc3p7WxHlvVEc6OrUXOyIU+BKCGoX0R6oev
-=3Xlj
+iQIcBAEBCAAGBQJTZN7gAAoJEJOE+m71LUu6lLoQAJ5QZXytFNSqc8gryU5jbicM
+z++lByYbhjN0Ghqh777bYk1N2blRvyWya18rzGXe8ckG8WpMp79j7Xhe8YCuIZC1
+aymajR6UuGUyJxi1HZCc0WjCw6qj+BN0WANUq70pJg5u2w6vWdswZBqLearT+ECZ
+dbrE4DdQnIsJ6+0IRub71HRMJeNstrE5v2kQD7y1XV6NLTd5eXo1RAqtm8k0Pkeo
+Y4x6pOPOOT2tz2JT4+aPWzYMLHn7iV1MPv+dJUaMNf58XC2RwbMtUNo+I3XUOt40
+F5cis0wsy7zBY71G2r9dK0MUtkFxYkw7Tw0JXCku3zgz6veOaz/UP2Q2z76Fm39O
+LXtAn2xi9QGp56YUtYEktGu1P4ZcgEgdvc/PyPGIw4ptrqcm/YAHC9sX9X4fre9X
+8JcApJf8uTCe6+LGX4MrYVIBgBBUsK+1SGmz4c3o9VLv4NfniheivqNLxeiKrTlh
+67MrniQYNgLi7lvG8xH9y+W5uv+UhUhxbEigkPC+ujeLh7NEJt8xQBh+IMmIo1Io
+kvp169lh/8S/Z1cVKSSKBOviTV4IKEOEfvZr+RVmTL23JObt3qlHbDr6riNUPwYD
+jVaeRKHNzvX34lRlzOPn0K48/4flOkDf3SKtxMTOGzyY67H8rUF6d6ZIMuZ8D6Px
+OSkJRck/5tGoXRZ0bxML
+=hroB
 -----END PGP SIGNATURE-----
