@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST guacamole-server-0.8.3.tar.gz 515611 SHA256 e958291ca967ce05d9e5e55d884b25725330fff6c067cbde4bbb7b039fb8db09 SHA512 c61428e83104fce004d99c83b31a195ef5dd01d601f5e5e15ab03530401fb9e23a8a6927b39a8854b14da7ab90407d9f56190ffc7649ff52501c59055d9a145a WHIRLPOOL 78ce02e7ad87120ca31be56a98fbeca71ab5b0725b7a456b70a5f8cef8d1d98b4b7fbcdc4bba4dd1f43da897118e3532ea5d1f4458864ef7ac6081942074542f
+DIST guacamole-server-0.9.0.tar.gz 556465 SHA256 289cb1ea0261396e9ede6aa0d2ac8d80b9ec03a124cb0669802f7e8556e21a58 SHA512 73942eecdeb8204a32e0d6ef0b92c2b23dea0b4a0e82693c05a81539319a7ff9db9ac897822f9ca33fb1913cec25058a16c67ec10d91778a3f1cf9615add5f0a WHIRLPOOL abb9c1d3fa144ae817fd87f42a1f4bfc69e9c6c3f41bac5f76b06b46dc8087d279a061b81097c3dad3c6ed5b528d8b400d8f8b3d3a4338189d401f6dc1845799
 EBUILD guacamole-server-0.8.3.ebuild 914 SHA256 00c71480a34de33950a4f4abc18b570d191710125925b7fc1795e26dda100b40 SHA512 14a70b8078273cd31ac3453b5460f6d90c287cbf51322ca91d5a0f92065ee3d7855eac2ab6f1fba3787addced215d11ece70c857a64e31e8b9744ffd18183891 WHIRLPOOL 26335fd5d094cf47519ef3d4b6d9c670a015d809cd95afb7c5d51465899164202492337f48c3eec0fe9c1bf995538ea4a5b4c5399dfe9ab5e74ffd91bec68e5a
-MISC ChangeLog 429 SHA256 d6959e05947c81bd3bf4f39b2de17e4ec221f3ea6b7bf0dbeacf4cfb7ad57a83 SHA512 d44a1a82a05e7da7f6d047b50e6744bb2246e293650c933897b99ab9158c0ac950844f70eac1bffcaf2e2d9fb565a11488fe61e3f41b32cf8e36ae04413d8295 WHIRLPOOL 07b7086db7232f75ab1e3f731172d4ddf350f5a32ea7e44fb93847c7185e95ddf9279658f64e8559316241790e24227e1c0152d1b2ea82cbb15596a07fea503f
+EBUILD guacamole-server-0.9.0.ebuild 914 SHA256 dba6ccb9c193a44a1ba2d039c763b7f0e8d6d93adc79ec15be50da2c4aa35ca4 SHA512 a5f9e27408419b46772da39ce44addbbe7e62a12e723ce811d1360d38f05afef684c2d640718ca2247b2994e46d387d23ac56ae9f5a8ff493cc6601e2ee08d70 WHIRLPOOL 96c1ffe87326fe8dabbb8182af4c82522ca86e165a5cdf24f97b8d8be4dda5c497c65cf3e9e5d8f79fc6ed504c353bfbc578f177f77fee09b0ae3ca735d1a60c
+MISC ChangeLog 574 SHA256 f737699bdcc652f097472930677ba6e8a254038da8de7051571dc6b227e4092d SHA512 e24c8957355159c6f4cc305369782a740bc9dbdbbf1aac2d3fbfac8c7158a788afb628ae40051f83de558b909784a55a52b3823695e30f338457fd67a240b65a WHIRLPOOL 419f03e7f1760bb1b9837a3773162f6256d8dc74c6b5dd1258023a67184e970923953598922670b46bda15517b484906874ee2821862ad7b701555f2e05e4a9c
 MISC metadata.xml 441 SHA256 97d623181eb0fc8b98ec2bdb3cda36c1ba1db60d4287dd3054811597be235581 SHA512 c8add284c0965c252b3304b5304adb37faa36016435e495c374f625004798a8df769ae058434b2be89b1407a47e79b7601a21f467dc3152fbb864626789fe87b WHIRLPOOL c079b280fe2454b08a5f19d638ccd624e253e50285a425d034d199a5ea6dc3497c524f27755b1cb133657f86f0f835a47f2da46c362571d2c58fc79d69c350e0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlKUl+4ACgkQakKUmsHeVLIG0ACfdfoKZdiQ5132YY0IMFRn0X2s
-NlUAnR4swFpIZ6aRlXGrUYDK9NgoKTt3
-=Vm+F
+iEYEAREIAAYFAlNk2dkACgkQakKUmsHeVLKFngCfUHjce2/oHMfHxRGrXUQfARs8
+7msAn2ET7TbqkW1K8UYn9r/ZPdealOhY
+=ejWh
 -----END PGP SIGNATURE-----
