@@ -2,15 +2,19 @@
 Hash: SHA256
 
 DIST guacamole-auth-ldap-0.8.0.tar.gz 382872 SHA256 745e7541ab5db9decb463a7358e17c13cab5843d8458e0bf04f5a8eda8f19064 SHA512 2e775de3757b0e161fd7c6ac19982763bbafec42fef3418cb469cf3cb6bf1783b01486fe28e5a250af7b67107a5c3c73e2ad2b10a4e49b3ca187e76e2b578776 WHIRLPOOL df9a926df2f2a095a816234b6499640149e81acb4b6610d94ff8588e28ae9eaace8c0ca1808d1522aa55531674c53cbc6b5f55f606d7af73918610c9eb095ecf
+DIST guacamole-auth-ldap-0.9.0.tar.gz 382885 SHA256 b9e0440202a4106b6fd0a8cdd9da7bfa476895ce8724edc7d75e80b89bca9780 SHA512 caf228029a4e69ac1ac1f252c761167c1676eadbb362877753710aa28d274f76ed8091102f5a142b871dc7a7e22f98d113c18fa06e46dfbf6ec57c3ea92b435b WHIRLPOOL 3f674c98c6c0bf068426f3c78947f1f09fecc19d55a341b58f9adde8920bc30722077feed7f293d082009991bc08ab8cbddba2569a65e05fcc39b8a91f5f875f
 DIST guacamole-auth-mysql-0.8.2.tar.gz 2101795 SHA256 26902d50237a5bcb65b5dc9e31e7c51d6318614b97200c58c030a655e57aed82 SHA512 9bc5e7a5750d52a3df288088fa331f9e442cea06abf704df3989e714daba03e20b07ff5c531b4966ccc2f50c49124b9b7819447330d3be9ac5cce79c368663c6 WHIRLPOOL bce4711ca03315feb770cd82f07b4370ea8ff74ca38a952827b36428150ee31c3e6deaf633fd7e256047ccf9e361e80b2d46248e5f2f6c3f896363b2e2badd13
+DIST guacamole-auth-mysql-0.9.0.tar.gz 2104231 SHA256 5419d62a8decae579b54773ed70c8f21b03c11a53c24de982e8f84a79d74423e SHA512 00cc09e75f8c977a2465759b97022007fe34ba9272f9b9004eec404419a68b8c0b301fc385b4f09af07bde82510a6f5b808585c78a61b26cabd98529a5b1c4fa WHIRLPOOL cacb8ee6387b43b0c4fd5c473680404828acc8cbdee219930043ef2f18857ca53b1502e8a650f0cbc6a4a2dfbb42d457991043a4823445e261eb2dc53aad9601
 DIST guacamole-client-0.8.3.tar.gz 345097 SHA256 a2e3d96b9f83308caf35068d657882fff9c3977533bb3b125cda1971422112ce SHA512 395ffbb08b877e4af538b1d0859d8e28e3352f2fe41482e7790c9b3c7597f37882ca032d383c7994d5f2e193404c5c267cdf793d642fb551e04465edfe93d7f0 WHIRLPOOL 19a778b40b7220604a7c5ecd93fa8a7680b7efadf304ffb5b747dad52bbf6dffdeed5a16c26cdd3773b6a0a155b7ba23a76b3233bdd2d658c0dc71a4a86ada80
+DIST guacamole-client-0.9.0.tar.gz 314566 SHA256 2f98776e542fccdeb3a120ae266834e56935a30196d0c3088a8fa523a07f3594 SHA512 33dd583cde9188066f0254fe9a531886be79110ef9f0e62fc60771d2751a927f783eb484e5484760e4ed3bc2aaa1f2000f43f953b78122cbdc2b0f19d8141457 WHIRLPOOL 972ea5c2bfe7f7dc2b1cc42ca6bc49485c18e46b161180e6eddf828467dcce76cae58f89ca0a4e847ab33ebb0ee2ffa87b052c94a9707d8b1538cc3f1ac29c20
 EBUILD guacamole-0.8.3.ebuild 4989 SHA256 b8a4046aaf9370bd088fa646d0391f212cc99bf3262b7cc03588aa87bee96394 SHA512 c6d79b0fc3e7a8874715dc4c43501174b74c9ff18ca26c98b04af947cc43f460beb770e1574efad593ce5ee79e144ecef7f19121fa630489e09b4e7cce288706 WHIRLPOOL 4a8b2ab3e2ff4b435752e6331c44b070901db93a6bcb39c622ebcf61a162bccd2e9ca40ea7eb4d4cc5b8c793704422333ec4d739b1c1135d35b2c13022dadb1d
-MISC ChangeLog 1666 SHA256 f29142e28f10279269714485c051dddb2bfd8f1a6cb1ba3a4c73dd8c45ec0731 SHA512 95752ac3bfa7fab3a4742c48d70a942026a2e50884c0bce2567dd715356f0ba3690a3a7888e77c8926394dc6f3beebacafad9e6f1353cf4082193aa418f4c21d WHIRLPOOL 6877ef19c7241ddc17156095ba285b124aa06f2552d4a24ad20ea5e9497ce6fe75a3d02f34191ff4b9631751c92ad039ecc2930ec16bc17481a12bbd18652c31
+EBUILD guacamole-0.9.0.ebuild 4987 SHA256 def40969081eb8bc533a961fd509f360c34f48dc7b68b929788917c83fa21931 SHA512 c314ae235dc3b533bcc49da47b3b7b34b73bd7cd6b4e351a8a4aa9309dbefdc441c00ac199047728e9e21f1092c88f44f43c09299335a5b0cfe02c5801d6413b WHIRLPOOL 4e7632e47895ae3508e7786edb6cd99ca066573f6fa823e80a02312d0c3b53e30df139c17845b18da7742fc66eabbbb1a8a8a6c8b125319bf2773e2b7ae86fcc
+MISC ChangeLog 1796 SHA256 f621adf55213439fc7103efedd98e08144783d5307f0415a73cc686235c44e7b SHA512 b9d951d4c9f57203cfb3464f07f2c7c2e4e484b6b924069a64e5238b31d6cf147a7b7eee9f8aaa37e89bfb6f0514e16852fa602f14fae64f6b8163d5fd0f8022 WHIRLPOOL c83e97d4e90345f1906551a9d22a1904faa4b26893424a639062b23d4070419b20e71d6263d29a06f657b10c06af3febfe8c107ecfc4e961b551a5ae8d485fa0
 MISC metadata.xml 641 SHA256 8da01a09b9826c5d47a704916466f320c7da31f5356db20874ebd7fc737bd51f SHA512 caef7a3e86f7e1cd1338e4abab0ee96c06690ab831f66260007a3ae732449fd4c87e98b97009b6a7f7be5f80746828b8bd0f49dde5c5a89717caedc6435b3773 WHIRLPOOL 45ddf48b13040a4f0fb36d7cd39fc030b0e087bb353b09d6d8c83ee8bb627cac82ee5d23181373675395394d8c4a3435855b4001d8a686557df701819a7f34bd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlMMu7AACgkQakKUmsHeVLKDmQCeNfAn2dhnwBz8+ZRwk3Zx/IHq
-GnwAniJ9wRMbSMuTTbx9lx2UE6clwp9H
-=aJIX
+iEYEAREIAAYFAlNk2lUACgkQakKUmsHeVLJ3vgCfSzCa7h24B/PpHV9BiJUFykFF
+k5gAnjHglxcZaOxWbkT39qUQOP4awYcb
+=lB3r
 -----END PGP SIGNATURE-----
