@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/guacamole-server
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/guacamole-server/ChangeLog,v 1.1 2013/11/26 12:48:44 nativemad Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/guacamole-server/ChangeLog,v 1.2 2014/05/03 12:06:44 nativemad Exp $
+
+*guacamole-server-0.9.0 (03 May 2014)
+
+  03 May 2014; Andreas Schuerch <nativemad@gentoo.org>
+  +guacamole-server-0.9.0.ebuild:
+  version bump.
 
 *guacamole-server-0.8.3 (26 Nov 2013)
 
