@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/guacamole
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/guacamole/ChangeLog,v 1.9 2014/02/25 15:56:28 nativemad Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/guacamole/ChangeLog,v 1.10 2014/05/03 12:09:01 nativemad Exp $
+
+*guacamole-0.9.0 (03 May 2014)
+
+  03 May 2014; Andreas Schuerch <nativemad@gentoo.org> +guacamole-0.9.0.ebuild:
+  version bump.
 
   25 Feb 2014; Andreas Schuerch <nativemad@gentoo.org> -guacamole-0.6.2.ebuild,
   -guacamole-0.7.0.ebuild, -guacamole-0.8.0.ebuild:
