@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/libmicrohttpd
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libmicrohttpd/ChangeLog,v 1.63 2014/03/27 14:54:26 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libmicrohttpd/ChangeLog,v 1.64 2014/05/03 12:18:01 blueness Exp $
+
+*libmicrohttpd-0.9.35 (03 May 2014)
+
+  03 May 2014; Anthony G. Basile <blueness@gentoo.org>
+  +libmicrohttpd-0.9.35.ebuild:
+  Version bump
 
   27 Mar 2014; Mike Gilbert <floppym@gentoo.org> libmicrohttpd-0.9.33.ebuild,
   libmicrohttpd-0.9.34.ebuild:
